# PyPSI

./: PROJECT_PLAN.md  README.md  main.py  pyproject.toml
docs/: PHASE2_SUMMARY.md
examples/: simple_island.py
research/: 01-overview.md  02-joscha-bach-ps2.md  03-modern-implementations.md  04-current-landscape.md  05-summary.md  PSI_THEORY_ANALYSIS.md  PSI_THEORY_SYNTHESIS.md  README.md
src/pypsi/: __init__.py
src/pypsi/action/: __init__.py  schemas.py
src/pypsi/core/: __init__.py  structures.py
src/pypsi/environment/: __init__.py  island.py
src/pypsi/needs/: __init__.py  motivators.py  tanks.py
src/pypsi/perception/: __init__.py  system.py
tests/: test_action.py  test_environment.py  test_perception.py  test_structures.py
